// Copyright 2022 PingCAP, Ltd.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.#pragma once

syntax = "proto3";

package dtpb;

message TiFlashColumnInfo {
    int64 column_id = 1;
    // serialized name by IDataType::getName()
    // TODO: deseri this name is costly, consider another way
    // like the tipb.ColumnInfo
    bytes type_full_name = 2;
    // maybe this is not need
    bytes column_name = 3;
}

message TiFlashSchema {
    repeated TiFlashColumnInfo columns = 1;
}

message KeyRange {
    bytes start = 1;
    bytes end = 2;
}

message ColumnFileTiny {
    uint64 page_id = 1;
    // serialized schema
    bytes schema = 2;
}
message ColumnFileBig {
    uint64 page_id = 1;
    uint64 file_id = 2;
}
message ColumnFileDeleteRange {
    KeyRange key_range = 1;
}

message ColumnFileRemote {
    oneof column_file {
        ColumnFileTiny tiny = 1;
        ColumnFileBig big = 2;
        ColumnFileDeleteRange delete_range = 3;
    }
}

message DisaggregatedSegment {
    uint64 segment_id = 1;
    KeyRange key_range = 2;
    repeated ColumnFileBig stable_pages = 3;
    // serialized array of ColumnFileRemote
    repeated ColumnFileRemote column_files = 4;
    bool has_mem_table = 5;
}

message DisaggregatedPhysicalTable {
    bytes snapshot_id = 1; // mpp.DisaggregatedTaskMeta
    uint64 table_id = 2;
    repeated DisaggregatedSegment segments = 3;
}

// TODO: this does not belong to DeltaMerge
message RemotePage {
    // The page is read as a cf in DeltaVS,
    // so we can get the u64 page_id.
    // TODO: do we need the full page_id?
    uint64 page_id = 1;
    bytes data = 2;
    uint64 checksum = 3;
    repeated uint64 field_offsets = 4;
}
